<resources>
	<string name="app_name" translatable="false">Bcomp</string>
	<string name="menu">Menu</string>
	<string name="alu">ALU</string>
	<string name="memory">Memory</string>
	<string name="button_register">Button register</string>
	<string name="address_register">Address register</string>
	<string name="data_register">Data register</string>
	<string name="command_register">Command register</string>
	<string name="program_register">Program counter</string>
	<string name="address_input">Address input</string>
	<string name="write">write</string>
	<string name="read">Read</string>
	<string name="start">Start</string>
	<string name="sequel">Continuation</string>
	<string name="work">Work</string>
	<string name="tact">Tact</string>
	<string name="accumulator">Accumulator</string>
	<string name="control_unit">Control unit</string>
	<string name="command_select">Command selection</string>
	<string name="faster">Speed up</string>
	<string name="slower">Speed down</string>
	<string name="address_select">Address selection</string>
	<string name="execution">Execution</string>
	<string name="interrupt">Interrupt</string>
	<string name="console_operation">Console operation</string>
	<string name="program">Program</string>
	<string name="compile">compile</string>
	<string name="asm">Assembler</string>
	<string name="basic">Basic</string>
	<string name="micro_comp">Micro programm</string>
	<string name="external_device">External devices</string>
</resources>
