<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
										xmlns:app="http://schemas.android.com/apk/res-auto"
										xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
										android:layout_width="match_parent"
										android:layout_height="match_parent"
										android:fitsSystemWindows="true">
	<!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
	<android.support.constraint.ConstraintLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:context=".ASMActivity"
			android:background="@color/colorBg">

		<android.support.v7.widget.Toolbar android:id="@+id/toolbar" style="@style/Toolbar"/>

		<EditText
				android:id="@+id/asm_code"
				android:layout_width="match_parent"
				android:layout_height="349dp"
				android:padding="10dp"
				android:fontFamily="sans-serif-condensed"
				android:hint="@string/asm"
				android:background="#d3d7b6"
				android:minLines="20"
				android:maxLines="20"
				android:scrollbars="vertical"
				android:inputType="textMultiLine"
				app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginLeft="8dp" android:layout_marginTop="64dp" android:layout_marginStart="8dp"
				android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
				app:layout_constraintEnd_toEndOf="parent"/>
		<Button
				android:text="@string/compile"
				android:onClick="compile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent"
				android:layout_marginTop="420dp"
				app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp"/>
		<TextView
				android:layout_width="367dp"
				android:layout_height="84dp"
				android:id="@+id/errorLabel"
				android:textColor="@color/colorRed"
				app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
				android:layout_marginRight="8dp"
				app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.504"
				android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/button3"/>

	</android.support.constraint.ConstraintLayout>
	<android.support.design.widget.NavigationView
			android:id="@+id/nav_view"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="start"
			android:fitsSystemWindows="true">
		<Button
				android:text="@string/faster"
				android:onClick="faster"
				android:layout_width="wrap_content"
				android:layout_marginTop="80dp"
				android:layout_height="wrap_content" android:id="@+id/button2"/>
		<Button
				android:text="@string/slower"
				android:onClick="slower"
				android:layout_marginTop="120dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/button"/>
		<Button
				android:text="@string/basic"
				android:onClick="toBasic"
				android:layout_marginTop="120dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/to_basic"/>
		<Button
				android:text="@string/asm"
				android:onClick="toAsm"
				android:layout_marginTop="160dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/to_asm"/>

	</android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
